# TOF-Sensor

./: .gitignore  CMakeLists.txt  README.md  VISUALIZER_README.md  build.sh  main.c  setup_visualizer.sh  vl53l7cx_visualizer.py
vl53l7cx_project/: CMakeLists.txt  README.md  build.sh  debug_main.c  main.c  main_st_driver.c  minimal_test.c  platform_pico.c  platform_pico.h  simple_blink.c  test_serial.c  vl53l7cx_driver.c  vl53l7cx_driver.h
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/: changelog.txt
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/CubeIDE_F401RE_Example/: .cproject  .project  L7cx_f401.ioc
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/CubeIDE_F401RE_Example/Core/Inc/: platform.h
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/CubeIDE_F401RE_Example/Core/Src/: main.c  platform.c
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/CubeIDE_F401RE_Example/Drivers/BSP/Components/VL53L7CX_ULD_API/src/: vl53l7cx_plugin_xtalk.c
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/Docs/: README.txt
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/Examples/: Example_10_motion_indicator.c  Example_11_motion_indicator_with_detection_thresholds.c  Example_1_ranging_basic.c  Example_2_get_set_params.c  Example_3_ranging_modes.c  Example_4_power_modes.c  Example_5_multiple_targets_per_zone.c  Example_6_I2C_and_RAM_optimization.c  Example_7_calibrate_xtalk.c  Example_8_vizualize_xtalk_data.c  Example_9_detection_thresholds.c
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/Platform/: platform.c  platform.h
vl53l7cx_project/STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/VL53L7CX_ULD_API/src/: vl53l7cx_plugin_xtalk.c
vl53l7cx_project/inc/: vl53l7cx_api.h  vl53l7cx_buffers.h
